# mariadb-udf-zmq

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
